gccida/c3/delete_insn
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_insn/src/cfgrtl.c:579:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_insn/src/cfgrtl.c:579:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_insn/src/cfgrtl.c:610:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v3.rtwint = ( __int64)insn[3].fld[0]; 
                      ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_insn/src/cfgrtl.c:618:23: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5.rtwint = ( __int64)insn[4]; 
                      ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_insn/src/cfgrtl.c:622:1: error: must use 'enum' tag to refer to type 'reg_note'
reg_note = find_reg_note( insn, REG_LABEL, 0LL); 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_insn/src/cfgrtl.c:622:1: error: expected expression
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_insn/src/cfgrtl.c:623:6: error: use of undeclared identifier 'reg_note'; did you mean 'reg_names'?
if ( reg_note ) 
     ^~~~~~~~
     reg_names
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_insn/src/regs.h:166:21: note: 'reg_names' declared here
extern const char * reg_names[FIRST_PSEUDO_REGISTER];
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_insn/src/cfgrtl.c:625:23: error: use of undeclared identifier 'reg_note'
v5.rtwint = ( __int64)reg_note->fld[0]; 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_insn/src/cfgrtl.c:632:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = ( _DWORD *)insn[2]; 
                ^~~~~~~
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_insn/src/obj/cfgrtl.o] Error 1
